# cio

./: .appveyor.yml  .clang-format  .clang-tidy  .codacy.yml  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  .travisci_build_coverity_scan.sh  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CTestConfig.cmake  Kconfig.cio  LICENSE  README.md  TODO  _config.yml  all.qbs  btc.cmake  build.cmake  codecov.yml  index.html  index.md  params.json  sonar-project.properties
autobahn/: CMakeLists.txt  autobahn_server.c  autobahn_server.qbs  autobahn_server_project.qbs
examples/: CMakeLists.txt  examples.qbs  examples_project.qbs  http_server.c  http_server.qbs  index.html  periodic_timer.c  periodic_timer.qbs  socket_connect.c  socket_echo.c  socket_echo.qbs  socket_ping_pong.c  socket_two_connects.c  timer_example.c  timer_example.qbs  uart_ping_pong.c  websocket_server.c  websocket_server.qbs
examples/linux/: CMakeLists.txt  uds_socket_ping_pong.c
lib/: CMakeLists.txt  generate_version.cmake
lib/doxygen/: mainpage.dox
lib/src/: base64.c  buffered_stream.c  cio_base64.c  cio_buffered_stream.c  cio_http_location.c  cio_http_location_handler.c  cio_http_server.c  cio_random.c  cio_utf8_checker.c  cio_version.c  cio_websocket.c  cio_websocket_location_handler.c  http_location.c  http_location_handler.c  http_server.c  utf8_checker.c  version.c  websocket.c  websocket_location_handler.c
src/: CMakeLists.txt  CMakeLists.txt.ori  Doxyfile  all.qbs  buffered_stream.h  cio-dynamiclib.qbs  cio-staticlib.qbs  cio.qbs  cioFiles.qbs  cio_address_family.h  cio_allocator.h  cio_base64.c  cio_base64.h  cio_buffer_allocator.h  cio_buffered_stream.c  cio_buffered_stream.h  cio_compiler.h  cio_doc.qbs  cio_endian.h  cio_error_code.h  cio_eventloop.h  cio_http_client.h  cio_http_location.c  cio_http_location.h  cio_http_location_handler.c  cio_http_location_handler.h  cio_http_method.h  cio_http_request_handler.c  cio_http_request_handler.h  cio_http_server.c  cio_http_server.h  cio_http_server_location.c  cio_http_server_location.h  cio_http_status_code.h  cio_inet4_address.h  cio_inet4_socket_address.h  cio_inet6_address.h  cio_inet_address.c  cio_inet_address.h  cio_inet_socket_address.c  (+39 more)
src/docs/: CMakeLists.txt  Doxyfile.in  cio_doc.qbs
src/linux/: CMakeLists.txt  cio.qbs  cio_address_family_impl.h  cio_error_code_impl.h  cio_eventloop_impl.h  cio_inet4_address_impl.h  cio_inet4_socket_address_impl.h  cio_inet6_address_impl.h  cio_inet6_socket_address_impl.h  cio_inet_address_impl.c  cio_inet_address_impl.h  cio_linux_alloc.c  cio_linux_alloc.h  cio_linux_bsd_random.c  cio_linux_endian.c  cio_linux_epoll.c  cio_linux_epoll.h  cio_linux_inet_address_impl.c  cio_linux_random.c  cio_linux_server_socket.c  cio_linux_server_socket.h  cio_linux_socket.c  cio_linux_socket.h  cio_linux_socket_address_impl.c  cio_linux_socket_utils.c  cio_linux_socket_utils.h  cio_linux_string.c  cio_linux_timer.c  cio_server_socket_impl.h  cio_server_socket_linux.c  cio_server_socket_linux.h  cio_socket_address_family_impl.h  cio_socket_address_impl.c  cio_socket_address_impl.h  cio_socket_impl.h  cio_system_error_code.h  cio_timer.c  cio_timer_impl.h  cio_unix_address.c  cio_unix_address.h  (+3 more)
src/mbed/: CMakeLists.txt  cio_error_code_impl.h  cio_eventloop_impl.h  cio_mbed_random.c  cio_mbed_random.cpp  cio_server_socket_impl.h  cio_socket_impl.h  cio_timer_impl.h
src/sha1/: cio_sha1.c  cio_sha1.h  sha1.c  sha1.h
src/tests/: CMakeLists.txt  test_cio_base64.c  test_cio_buffered_stream.c  test_cio_buffered_stream.qbs  test_cio_http_server.c  test_cio_http_server.qbs  test_cio_http_server_iostream.c  test_cio_read_buffer.c  test_cio_read_buffer.qbs  test_cio_utf8_checker.c  test_cio_websocket.c  test_cio_websocket_client.c  test_cio_websocket_location_handler.c  test_cio_websocket_mask.c  test_cio_write_buffer.c  test_cio_write_buffer.qbs  tests.qbs  tests_project.qbs
src/windows/: CMakeLists.txt  cio_address_family_impl.h  cio_error_code_impl.h  cio_eventloop_impl.h  cio_inet4_socket_address_impl.h  cio_inet6_socket_address_impl.h  cio_inet_address_impl.h  cio_server_socket_impl.h  cio_socket_address_impl.h  cio_socket_impl.h  cio_timer_impl.h  cio_windows_cpio.c  cio_windows_endian.c  cio_windows_inet_address_impl.c  cio_windows_iocp.c  cio_windows_random.c  cio_windows_server_socket.c  cio_windows_socket.c  cio_windows_socket.h  cio_windows_socket_address_impl.c  cio_windows_socket_utils.c  cio_windows_socket_utils.h  cio_windows_string.c  cio_windows_timer.c
src/zephyr/: CMakeLists.txt  cio_address_family_impl.h  cio_error_code_impl.h  cio_eventloop_impl.h  cio_inet6_socket_address_impl.h  cio_inet_address_impl.h  cio_server_socket_impl.h  cio_socket_impl.h  cio_timer_impl.h  cio_zephyr_eventloop.c  cio_zephyr_random.c  cio_zephyr_server_socket.c  cio_zephyr_socket.c  cio_zephyr_string.c  cio_zephyr_timer.c
tests/: CMakeLists.txt  collect_coverage.cmake  reset_coverage.cmake  test_buffered_stream.c  test_cio_base64.c  test_cio_buffered_stream.c  test_cio_http_location.c  test_cio_http_server.c  test_cio_http_server_iostream.c  test_cio_inet_address.c  test_cio_inet_socket_address.c  test_cio_random.c  test_cio_read_buffer.c  test_cio_utf8_checker.c  test_cio_version.c  test_cio_websocket.c  test_cio_websocket_client.c  test_cio_websocket_iostream.c  test_cio_websocket_location_handler.c  test_cio_websocket_mask.c  test_cio_write_buffer.c  test_http_location.c  test_http_server.c  test_inet_socket_address.c  test_random.c  test_utf8_checker.c  test_version.c  test_websocket.c  test_websocket_location_handler.c  test_write_buffer.c
tests/linux/: CMakeLists.txt  test_cio_linux_endian.c  test_cio_linux_epoll.c  test_cio_linux_random_errors.c  test_cio_linux_server_socket.c  test_cio_linux_socket.c  test_cio_linux_socket_utils.c  test_cio_linux_string.c  test_cio_linux_timer.c  test_cio_linux_uart.c  test_cio_linux_unix_socket_address.c  test_linux_endian.c  test_linux_epoll.c  test_linux_random_errors.c  test_linux_server_socket.c  test_linux_socket.c  test_linux_socket_utils.c  test_linux_string.c  (+2 more)
(+972 files in other folders)
